--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ cache/.DS_Store
 .idea/workspace.xml
 .idea/misc.xml
 .idea/GPT2-Chinese.iml
-data/
+data/test_1500.xlsx
 .samples.txt
 .idea/modules.xml
 .idea/vcs.xml
