--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ cache/.DS_Store
 .idea/workspace.xml
 .idea/misc.xml
 .idea/GPT2-Chinese.iml
-data/test_1500.xlsx
-data/train.txt
+data/
 .samples.txt
 .idea/modules.xml
 .idea/vcs.xml
